# train_hourglass

./: CMakeLists.txt  package.xml
launch/: train.launch
scripts/: plotloss.py
src/: common_headers.h  lua_utils.cpp  lua_utils.h  main_node.cpp  ros_utils.cpp  ros_utils.h
src/lua/: data.lua  init.lua  main.lua  model.lua  ref.lua  train.lua
src/lua/util/: eval.lua  img.lua  pose-int.lua
